--- a/.github/workflows/thirty.yml
+++ b/.github/workflows/thirty.yml
@@ -20,3 +20,10 @@ jobs:
           import platform
           print (platform.processor())
         shell: python
+  run-windows-commands:
+      runs-on: windows-latest
+      needs: ["run-shell-commands"]
+      steps:
+        - name: Directory
+          run: pwd
+          shell: bash       
