--- a/.github/workflows/thirty.yml
+++ b/.github/workflows/thirty.yml
@@ -8,22 +8,12 @@ jobs:
   run-shell-commands:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actionz/checkout@v1
       - name: echo string
         run: echo "Hello"
       - name: Multi line string
         run: |
           pwd
           node -v
-          ls -a
-      - name: Python command
-        run: |
-          import platform
-          print (platform.processor())
-        shell: python
-  run-windows-commands:
-      runs-on: windows-latest
-      needs: ["run-shell-commands"]
-      steps:
-        - name: Directory
-          run: pwd
-          shell: bash       
+          ls -a  
