--- a/.github/workflows/thirty.yml
+++ b/.github/workflows/thirty.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actionz/checkout@v1
+        uses: actions/checkout@v1
       - name: echo string
         run: echo "Hello"
       - name: Multi line string
