--- a/.github/workflows/thirty.yml
+++ b/.github/workflows/thirty.yml
@@ -10,8 +10,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-      - name: echo string
-        run: echo "Hello"
+      - name: set terraform
+        uses: hashicop/setup-terraform@v2
+        with:
+          terraform_version: 1.1.9
+      - name: Terraform init
+        run: terraform init   
       - name: Multi line string
         run: |
           pwd
