--- a/.github/workflows/thirty.yml
+++ b/.github/workflows/thirty.yml
@@ -5,7 +5,7 @@ on:
 
 
 jobs:
-  run-shell-commands:
+  terraform-workflow:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -16,8 +16,6 @@ jobs:
           terraform_version: 1.1.9
       - name: Terraform init
         run: terraform init   
-      - name: Multi line string
-        run: |
-          pwd
-          node -v
-          ls -a  
+      - name: Terraform validate
+        run: terraform validate
+       
