--- a/.github/workflows/thirty.yml
+++ b/.github/workflows/thirty.yml
@@ -18,4 +18,6 @@ jobs:
         run: terraform init   
       - name: Terraform validate
         run: terraform validate
+      - name: Terraform plan
+        run: terraform plan  
        
